# alumet

./: .gitignore  Cargo.toml
agent/: Cargo.toml
app-agent/: .gitignore  Cargo.toml  README.md
core/alumet/src/metrics/: def.rs  duplicate.rs  mod.rs  registry.rs
core/alumet/src/pipeline/elements/source/: control.rs  run.rs  trigger.rs
core/alumet/src/plugin/: phases.rs
core/alumet/src/test/: runtime.rs
core/alumet/tests/: metric_duplicates.rs
plugin-opentelemetry/: Cargo.toml  README.md
plugin-opentelemetry/src/: lib.rs  output.rs
plugin-post-processing/: Cargo.toml  README.md
plugin-post-processing/src/: lib.rs  transform.rs
plugin-prometheus-exporter/: Cargo.toml  README.md
plugin-prometheus-exporter/src/: lib.rs  output.rs
plugin-rename-metrics/: Cargo.toml
plugin-rename-metrics/src/: lib.rs
plugins/aggregation/src/: lib.rs
plugins/energy-estimation-tdp/: README.md
plugins/procfs/: README.md
plugins/procfs/src/: network.rs
plugins/prometheus-exporter/src/: output.rs
plugins/relay/src/server/: source.rs
